--- a/M3-D8/Backoffice.html
+++ b/M3-D8/Backoffice.html
@@ -90,7 +90,7 @@
         <div class="col-10 col-md-6 mx-auto">
           <h1 class="text-center my-5">Backoffice</h1>
 
-          <form onsubmit="handleSubmit(event)">
+          <form onsubmit="handleSubmit(item)">
             <!-- 
                          {
                   "_id": "5d318e1a8541744830bef139", //SERVER GENERATED
@@ -123,7 +123,6 @@
               placeholder="Item description"
             />
 
-            <!--Event Price-->
             <label>Brand</label>
             <input
               id="brand"
@@ -132,18 +131,14 @@
               placeholder="Item brand"
             />
 
-            <!--Image-->
-            <label>Image</label>
-            <div class="card" style="width: 18rem">
-              <img
-                id="image"
-                src="assets\71r0+XobjAL._AC_SL1500_.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body"></div>
-            </div>
-            <!--Price-->
+            <label>Image Url</label>
+            <input
+              id="image"
+              type="text"
+              class="form-control"
+              placeholder="Item Url"
+            />
+
             <label>Price</label>
             <input
               id="price"
@@ -161,8 +156,8 @@
     </div>
 
     <script>
-      async function handleSubmit(event) {
-        event.preventDefault();
+      async function handleSubmit(item) {
+        item.preventDefault();
 
         const newItem = {
           name: document.querySelector("#name").value,
@@ -182,7 +177,7 @@
               headers: {
                 Authorization:
                   "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2MDgwMjEyYmIxZjBmYjAwMTVkOTE3OTkiLCJpYXQiOjE2MTkwMDk4MzUsImV4cCI6MTYyMDIxOTQzNX0.sjaCwExKLRwOY8S2I_evvMJ0RFmAb_2kU2aqNqyAakc",
-                "Content-Type": "application/json",
+                "Content-Type": "application/json"
               },
               body: JSON.stringify(newItem),
             }
@@ -190,7 +185,7 @@
           if (!response.ok) throw new Error("Failed to post");
 
           const data = await response.json();
-          alert("Event added successfully with id " + data._id);
+          alert("Item added successfully");
         } catch (error) {
           alert(error.message);
         }
