--- a/M3-D8/M3-D8.html
+++ b/M3-D8/M3-D8.html
@@ -84,24 +84,24 @@
         </ul>
       </div>
     </nav>
+    <h1 class="text-center my-5">Our Products</h1>
 
     <div class="container">
-      <div id="itemDiv" class="row py-3">
-        <div class="col-12 col-md-3 col-lg-4">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Name</h5>
-              <p class="card-text">Item Description</p>
-              <p class="card-text">Price</p>
-              <a href="#" class="btn btn-primary">Brand</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="itemDiv" class="row py-3"></div>
     </div>
 
     <script>
+      const itemList = document.querySelector("#itemDiv");
+      // console.log(itemList);
+      window.onload = async function () {
+        try {
+          const items = await loadItems();
+          displayItems(items);
+        } catch (error) {
+          // alert(error.message);
+        }
+      };
+
       const loadItems = async () => {
         const response = await fetch(
           "https://striveschool-api.herokuapp.com/api/product/",
@@ -113,15 +113,11 @@
           }
         );
         if (response.ok) {
-          const events = await response.json();
-          return events;
+          const items = await response.json();
+          return items;
         } else {
-          throw new Error("Failed to fetch events");
+          throw new Error("Failed to fetch items");
         }
-        // const body = await response.json();
-        // console.log("Good");
-        // return body;
-        // console.log(body);
 
         function displayItems(items) {
           itemList.innerHTML = "";
@@ -131,12 +127,13 @@
           for (let item of items) {
             itemList.innerHTML += `  <div class="col-12 col-md-3 col-lg-4">
           <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
+            
             <div class="card-body">
               <h5 class="card-title">${item.name}</h5>
-              <p class="card-text">Item Description</p>
-              <p class="card-text">Price</p>
-              <a href="#" class="btn btn-primary">Brand</a>
+              <p class="card-text">${item.description}</p>
+              <p class="card-text">${item.price}</p>
+              <p class="card-text">${item.imageUrl}</p>
+              <a href="#" class="btn btn-primary">${item.brand}</a>
             </div>
           </div>
         </div>        
@@ -144,7 +141,6 @@
           }
         }
       };
-      // console.log(loadItems());
     </script>
 
     <!-- Optional JavaScript; choose one of the two! -->
