--- a/M3-D9/Backoffice.html
+++ b/M3-D9/Backoffice.html
@@ -118,6 +118,7 @@
               type="text"
               class="form-control"
               placeholder="Item name"
+              required
             />
 
             <label>Description</label>
@@ -126,6 +127,7 @@
               type="text"
               class="form-control"
               placeholder="Item description"
+              required
             />
 
             <label>Brand</label>
@@ -134,6 +136,7 @@
               type="text"
               class="form-control"
               placeholder="Item brand"
+              required
             />
 
             <label>Image Url</label>
@@ -142,6 +145,7 @@
               class="form-control"
               value="http://placehold.it/300x400"
               placeholder="Item Url"
+              required
             />
 
             <label>Price</label>
@@ -150,6 +154,7 @@
               type="number"
               class="form-control"
               placeholder="Item price"
+              required
             />
 
             <div class="d-flex pt-3">
