--- a/M3-D9/M3-D9.html
+++ b/M3-D9/M3-D9.html
@@ -91,6 +91,10 @@
     <a href="detail.html?id=6080c9feb1f0fb0015d9187b" class="btn btn-secondary"
       >Detail</a
     > -->
+ <!--    Lenovo IdeaPad
+Duet Chromebook, 10.1 Inch, 1920 x 1200, Full HD, WideView, Touch, Tablet PC
+
+€279 -->
 
     <div class="container">
       <div id="itemDiv" class="row py-3"></div>
@@ -118,8 +122,8 @@
 
         for (let item of items) {
           itemList.innerHTML += `  <div class="col-12 col-md-6 col-lg-4">
-          <div class="card">
-            <img src="${item.imageUrl}" class="card-img-top" alt="...">
+          <div class="card my-3">
+            <img src="${item.imageUrl}" class="card-img-top" height ="300"alt="...">
             <div class="card-body">
               <h5 class="card-title">${item.name}</h5>
               <p class="card-text">${item.description}</p>
